@@ -484,8 +484,8 @@ class CTemplate extends CZBXAPI{
 		}
 
 
-COpt::memoryPick();
-		if(($options['output'] != API_OUTPUT_EXTEND) || !is_null($options['countOutput'])){
+Copt::memoryPick();
+		if(!is_null($options['countOutput'])){
 			if(is_null($options['preservekeys'])) $result = zbx_cleanHashes($result);
 			return $result;
 		}
@@ -523,9 +523,9 @@ COpt::memoryPick();
 
 				if(!is_null($options['limitSelects'])) order_result($templates, 'host');
 				foreach($templates as $templateid => $template){
-					$thosts = $template['hosts'];
-					unset($template['hosts']);
-					foreach($thosts as $hnum => $host){
+					unset($templates[$templateid]['hosts']);
+
+					foreach($template['hosts'] as $hnum => $host){
 						if(!is_null($options['limitSelects'])){
 							if(!isset($count[$host['hostid']])) $count[$host['hostid']] = 0;
 							$count[$host['hostid']]++;
@@ -566,9 +566,9 @@ COpt::memoryPick();
 
 				if(!is_null($options['limitSelects'])) order_result($hosts, 'host');
 				foreach($hosts as $hostid => $host){
-					$htemplates = $host['templates'];
-					unset($host['templates']);
-					foreach($htemplates as $tnum => $template){
+					unset($hosts[$hostid]['templates']);
+
+					foreach($host['templates'] as $tnum => $template){
 						if(!is_null($options['limitSelects'])){
 							if(!isset($count[$template['templateid']])) $count[$template['templateid']] = 0;
 							$count[$template['templateid']]++;
@@ -610,9 +610,9 @@ COpt::memoryPick();
 
 				if(!is_null($options['limitSelects'])) order_result($items, 'description');
 				foreach($items as $itemid => $item){
-					$ihosts = $item['hosts'];
-					unset($item['hosts']);
-					foreach($ihosts as $hnum => $host){
+					unset($items[$itemid]['hosts']);
+
+					foreach($item['hosts'] as $hnum => $host){
 						if(!is_null($options['limitSelects'])){
 							if(!isset($count[$host['hostid']])) $count[$host['hostid']] = 0;
 							$count[$host['hostid']]++;
@@ -654,10 +654,9 @@ COpt::memoryPick();
 
 				if(!is_null($options['limitSelects'])) order_result($triggers, 'description');
 				foreach($triggers as $triggerid => $trigger){
-					$thosts = $trigger['hosts'];
-					unset($trigger['hosts']);
+					unset($trigger[$triggerid]['hosts']);
 
-					foreach($thosts as $hnum => $host){
+					foreach($trigger['hosts'] as $hnum => $host){
 						if(!is_null($options['limitSelects'])){
 							if(!isset($count[$host['hostid']])) $count[$host['hostid']] = 0;
 							$count[$host['hostid']]++;
@@ -699,10 +698,9 @@ COpt::memoryPick();
 
 				if(!is_null($options['limitSelects'])) order_result($graphs, 'name');
 				foreach($graphs as $graphid => $graph){
-					$ghosts = $graph['hosts'];
-					unset($graph['hosts']);
+					unset($graph[$graphid]['hosts']);
 
-					foreach($ghosts as $hnum => $host){
+					foreach($graph['hosts'] as $hnum => $host){
 						if(!is_null($options['limitSelects'])){
 							if(!isset($count[$host['hostid']])) $count[$host['hostid']] = 0;
 							$count[$host['hostid']]++;
@@ -744,10 +742,9 @@ COpt::memoryPick();
 
 				if(!is_null($options['limitSelects'])) order_result($applications, 'name');
 				foreach($applications as $applicationid => $application){
-					$ghosts = $application['hosts'];
-					unset($application['hosts']);
+					unset($application[$applicationid]['hosts']);
 
-					foreach($ghosts as $hnum => $host){
+					foreach($application['hosts'] as $hnum => $host){
 						if(!is_null($options['limitSelects'])){
 							if(!isset($count[$host['hostid']])) $count[$host['hostid']] = 0;
 							$count[$host['hostid']]++;
